syntax = "proto3";

package syft.lib.python.collections;

message OrderedDict {
  repeated bytes keys = 1;
  repeated bytes values = 2;
}
